--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'org.mariuszgromada.math:MathParser.org-mXparser:5.2.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
+
 }
